# covid-sim

./: .gitignore
src/: CMakeLists.txt  CovidSim.cpp  Kernels.cpp  Kernels.h  Perf.cpp  Perf.h  SetupModel.cpp
